--- a/recipes/libnabo/all/conandata.yml
+++ b/recipes/libnabo/all/conandata.yml
@@ -8,7 +8,7 @@ sources:
 patches:
   "1.1.0":
     - patch_file: "patches/1.1.0-0001-fix-cmake.patch"
-      patch_description: "use cci's eigen"
+      patch_description: "use cci's eigen, disable fPIC on static build"
       patch_type: "conan"
   "1.0.7":
     - patch_file: "patches/1.0.7-0001-fix-cmake.patch"
