Move users to waitlist
Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/.c3i/config_v1.yml
+++ b/.c3i/config_v1.yml
@@ -16,6 +16,7 @@ artifactory:
 github:
   reviewers: "reviewers.yml"
   authorized_users: "authorized_users.yml"
+  waitlist_users: "waitlist_users.yml"
 
 slack:
   credential_success_url: SLACK_SUCCESS_WEBHOOK_URL
