--- a/recipes/emsdk/config.yml
+++ b/recipes/emsdk/config.yml
@@ -1,4 +1,10 @@
 versions:
+  "3.1.53":
+    folder: all
+  "3.1.52":
+    folder: all
+  "3.1.51":
+    folder: all
   "3.1.50":
     folder: all
   "3.1.49":
