--- a/recipes/opendis6/all/test_package/CMakeLists.txt
+++ b/recipes/opendis6/all/test_package/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 project(test_package LANGUAGES CXX)
 
-find_package(OpenDIS REQUIRED)
+find_package(OpenDIS CONFIG REQUIRED)
 
 add_executable(test_package_dis test_package.cpp)
 target_link_libraries(test_package_dis PRIVATE OpenDIS::OpenDIS6)
